--- a/public/style.css
+++ b/public/style.css
@@ -5,6 +5,7 @@
 }
 .container
 {
+    background-color: #FFFFFF;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -51,7 +52,6 @@
 
 .letters
 {
-    background-color: #FFFFFF;
     width: 750px;
     display: flex;
     flex-direction: row;
@@ -81,12 +81,43 @@
         margin-top: 5.5px;
         text-transform: uppercase;
     }
-.chute
+
+.guess
 {
-    background-color: orange;
-    width: 600px;
-    height: 60px;
+    width: 750px;
+    height: 112px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center; 
 }
+    .guess p
+    {
+        color: #000000;
+        font-family: 'Roboto';
+        font-weight: 400;
+        font-size: 20px;
+    }
+    .guess input
+    {
+        border: 1px solid #CCCCCC;
+        width: 353px;
+        height: 40px;
+        box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.25);
+        border-radius: 3px;
+        margin: 15px;
+    }
+    .guess button
+    {
+        background-color: #E1ECF4;
+        border: 1px solid #7AA7C7;
+        color: #3C76A1;
+        border-radius: 3px;
+        width: 100px;
+        height: 40px;
+        font-family: 'Roboto';
+        font-weight: 700;
+        font-size: 16px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
