--- a/public/style.css
+++ b/public/style.css
@@ -51,8 +51,8 @@
             font-family: 'Roboto';
             font-weight: 700;
             font-size: 20px;
+            cursor: pointer;
         }
-
         .word
         {
             background-color: green;
@@ -90,6 +90,7 @@
         margin-bottom: 5.5px;
         margin-top: 5.5px;
         text-transform: uppercase;
+        cursor: pointer;
     }
 
 .guess
@@ -130,4 +131,5 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        cursor: pointer;
     }
