--- a/public/style.css
+++ b/public/style.css
@@ -54,10 +54,11 @@
             cursor: pointer;
         }
         .word
-        {
-            background-color: green;
-            width: 450px;
+        { 
             height: 100px;
+            display: flex;
+            align-items: flex-end;
+            justify-content: flex-end;
         }
 
 .letters
